test/tests/stages/18_structures/invalid_parse/extra_credit/union_member_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[10]:
  union
  identifier(a)
  {
  int
  identifier(member)
  =
  const int(1)
  ;
  }
  ;
